--- a/emacs-init.org
+++ b/emacs-init.org
@@ -456,10 +456,11 @@ in previous emacs.
                  ("B" projectile-switch-to-buffer-other-window  "switch (OW)")
                  ("f" projectile-find-file                      "file")
                  ("F" projectile-find-file-other-window         "file (OW)")
-                 ("s" projectile-switch-project                 "switch project")
+                 ("S" projectile-switch-project                 "switch project")
                  ("u" projectile-find-file-in-known-projects    "find in known"))
 
-     "Search" (("r" ddavis/helm-project-search                  "ripgrep")
+     "Search" (("r" ddavis/helm-project-search                  "ripgrep (helm)")
+               ("s" ddavis/ripgrep-proj-or-dir                  "ripgrep (rg.el)")
                ("o" projectile-multi-occur                      "multioccur"))
 
      "Misc" (("a" projectile-add-known-project                  "add to known")
@@ -567,7 +568,7 @@ A nice [[https://www.manueluberti.eu/emacs/2020/02/22/ripgrepping-with-helm/][bl
           rg-group-result t
           rg-hide-command t)
 
-    (rg-define-search ddavis/grep-vc-or-dir
+    (rg-define-search ddavis/ripgrep-proj-or-dir
       :query ask
       :format regexp
       :files "everything"
