--- a/emacs-init.org
+++ b/emacs-init.org
@@ -61,7 +61,7 @@
     "a flag for conditionally setting up erc and circe")
 
   (defconst ddavis-v-llvm-bin
-    (cond (ddavis-v-is-mac "~/Software/LLVM/releases/10.x/bin")
+    (cond (ddavis-v-is-mac "/usr/local/opt/llvm/bin")
           (ddavis-v-is-cc7 "~/Software/LLVM/releases/master/bin")
           (ddavis-v-is-grads-18 "~/Software/LLVM/releases/master/bin")
           (ddavis-v-is-dobian "/usr/bin"))
