--- a/emacs-init.org
+++ b/emacs-init.org
@@ -134,8 +134,7 @@
   (use-package auto-package-update
     :ensure t
     :config
-    (setq auto-package-update-delete-old-versions t
-          auto-package-update-interval 5))
+    (setq auto-package-update-delete-old-versions t))
 
   (use-package emacs
     :bind (:map package-menu-mode-map
