--- a/emacs-init.org
+++ b/emacs-init.org
@@ -103,13 +103,13 @@
     "machine dependent msmtp executable string")
 
   (defconst ddavis-v-mu-exe
-    (cond (ddavis-v-is-mac "~/Software/mu/releases/1.3.10/bin/mu")
+    (cond (ddavis-v-is-mac "~/Software/mu/releases/1.4/bin/mu")
           (ddavis-v-is-cc7 "/usr/local/bin/mu")
           (ddavis-v-is-grads-18 "~/Software/localbase/bin/mu"))
     "machine dependent mu executable string")
 
   (defconst ddavis-v-mu4e-dir
-    (cond (ddavis-v-is-mac "~/Software/mu/releases/1.3.10/share/emacs/site-lisp/mu4e")
+    (cond (ddavis-v-is-mac "~/Software/mu/releases/1.4/share/emacs/site-lisp/mu4e")
           (ddavis-v-is-grads-18 "~/Software/localbase/share/emacs/site-lisp/mu4e")
           (ddavis-v-is-cc7 "/usr/local/share/emacs/site-lisp/mu4e"))
     "machine dependent mu4e installation location string")
@@ -668,8 +668,15 @@ Configuration for [[https://github.com/emacs-lsp/lsp-mode][lsp-mode]] or [[https
 
   (use-package lsp-python-ms :ensure t)
   (use-package company-lsp :ensure t :commands company-lsp)
-  (use-package eglot :ensure t)
   (use-package helm-lsp :commands helm-lsp-workspace-symbol)
+
+  (use-package eglot
+    :ensure t
+    :commands eglot
+    :init
+    (setq eglot-server-programs
+          `((python-mode "pyls")
+            ((c++-mode c-mode) ,ddavis-v-clangd-exe))))
 #+end_src
 
 ** Hydra
@@ -994,10 +1001,10 @@ Setting up authentication with encryption
           '(("https://planet.scipy.org/feed.xml" python)
             ("https://planet.emacslife.com/atom.xml" emacs)
             ("https://ddavis.io/index.xml" blog)
-            ("http://pragmaticemacs.com/feed/" emacs)))
-    ;; ("http://feeds.podtrac.com/zKq6WZZLTlbM" nyt podcast)
-    ;; ("https://www.npr.org/rss/podcast.php?id=510310" npr podcast)
-    ;; ("https://www.npr.org/rss/podcast.php?id=510318" npr podcast)))
+            ("http://pragmaticemacs.com/feed/" emacs)
+            ;; ("https://www.npr.org/rss/podcast.php?id=510310" npr podcast)
+            ;; ("https://www.npr.org/rss/podcast.php?id=510318" npr podcast)
+            ("http://feeds.podtrac.com/zKq6WZZLTlbM" nyt podcast)))
 
 
     ;; Entries older than 3 weeks are marked as read
